--- a/src/index.scss
+++ b/src/index.scss
@@ -94,6 +94,10 @@ code {
   flex-direction: row-reverse;
 }
 
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -165,6 +169,14 @@ code {
 
 .ml-24 {
   margin-left: 24px;
+}
+
+.ml-2 {
+  margin-left: 2px;
+}
+
+.ml-4 {
+  margin-left: 4px;
 }
 
 .ml-8 {
@@ -263,6 +275,11 @@ code {
 
 .p-24 {
   padding: 24px;
+}
+
+.py-8 {
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .py-12 {
