--- a/src/routes/books/Books.scss
+++ b/src/routes/books/Books.scss
@@ -1,3 +1,10 @@
+.page-title-image {
+  height: 276px;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
 .books-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
